--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
         "vue-template-compiler": "^2.6.3"
     },
     "dependencies": {
+        "vue-flatpickr-component": "^8.1.2",
         "vue-js-modal": "^1.3.28"
     }
 }
