--- a/package.json
+++ b/package.json
@@ -14,7 +14,6 @@
         "browser-sync": "^2.26.3",
         "browser-sync-webpack-plugin": "2.0.1",
         "cross-env": "^5.1",
-        "jquery": "^3.2",
         "laravel-mix": "^4.0.7",
         "laravel-mix-tailwind": "^0.1.0",
         "lodash": "^4.17.5",
@@ -28,6 +27,7 @@
     },
     "dependencies": {
         "vue-flatpickr-component": "^8.1.2",
-        "vue-js-modal": "^1.3.28"
+        "vue-js-modal": "^1.3.28",
+        "vue-select": "^3.1.0"
     }
 }
