--- a/.gitignore
+++ b/.gitignore
@@ -3,19 +3,21 @@ node_modules/
 npm-debug.log
 yarn-error.log
 .idea
+/.vscode
 
 # Laravel 4 specific
 bootstrap/compiled.php
 app/storage/
 
 # Laravel 5 & Lumen specific
-public/storage
-public/hot
 storage/*.key
 .env
 Homestead.yaml
 Homestead.json
 /.vagrant
-public/css
-public/js
-public/mix-manifest.json
+/public/hot
+/public/storage
+/public/build
+/public/css
+/public/js
+/public/mix-manifest.json
