Upgrade Laravel to 5.8

--- a/.gitignore
+++ b/.gitignore
@@ -9,9 +9,10 @@ yarn-error.log
 bootstrap/compiled.php
 app/storage/
 
-# Laravel 5 & Lumen specific
+# Laravel 5 & Lumen specific
 storage/*.key
 .env
+.env.backup
 Homestead.yaml
 Homestead.json
 /.vagrant
