--- a/.styleci.yml
+++ b/.styleci.yml
@@ -1,10 +1,13 @@
-preset: recommended
-risky: true
-finder:
-  exclude:
-    - modules
-    - node_modules
-    - storage
-    - vendor
-  name: "*.php"
-  not-name: "*.blade.php"
+php:
+  preset: laravel
+  disabled:
+    - unused_use
+  finder:
+    not-name:
+      - index.php
+      - server.php
+js:
+  finder:
+    not-name:
+      - webpack.mix.js
+css: true 
