--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "dependencies": {
         "vue-flatpickr-component": "^8.1.2",
         "vue-js-modal": "^1.3.28",
+        "vue-paginate": "^3.6.0",
         "vue-select": "^3.1.0"
     }
 }
